# fishingshop_pike_products

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: python-check.yml
fishingshop_pike_scraper/: __init__.py  scraper.py
